# yxray

./: .gitignore  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.spec  pyproject.toml  version_info.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  secret-scan.yml  sensitive-scan.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-ROADMAP.md
.planning/phases/10-app-scaffold/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/phases/11-onboarding-and-project-management/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-05-PLAN.md  11-05-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VALIDATION.md  11-VERIFICATION.md
.planning/phases/12-file-watcher/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-04-PLAN.md  12-04-SUMMARY.md  12-05-PLAN.md  12-05-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-VALIDATION.md  12-VERIFICATION.md
.planning/phases/13-save-version/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-04-PLAN.md  13-04-SUMMARY.md  13-CONTEXT.md  13-RESEARCH.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-history-and-diff-viewer/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-04-PLAN.md  14-04-SUMMARY.md  14-CONTEXT.md  14-RESEARCH.md  14-VALIDATION.md  14-VERIFICATION.md
.planning/phases/15-system-tray-and-auto-start/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-03-PLAN.md  15-03-SUMMARY.md  15-04-PLAN.md  15-04-SUMMARY.md  15-05-PLAN.md  15-05-SUMMARY.md  15-CONTEXT.md  15-RESEARCH.md  15-VALIDATION.md  15-VERIFICATION.md  deferred-items.md
.planning/phases/16-remote-auth-and-push/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md  16-03-PLAN.md  16-03-SUMMARY.md  16-04-PLAN.md  16-04-SUMMARY.md  16-05-PLAN.md  16-05-SUMMARY.md  16-CONTEXT.md  16-RESEARCH.md  16-VALIDATION.md  16-VERIFICATION.md
.planning/phases/16.1-git-history-ux-with-push-integration-and-git-graph-view/: 16.1-01-PLAN.md  16.1-01-SUMMARY.md  16.1-02-PLAN.md  16.1-02-SUMMARY.md  16.1-03-PLAN.md  16.1-03-SUMMARY.md  16.1-04-PLAN.md  16.1-04-SUMMARY.md  16.1-CONTEXT.md  16.1-RESEARCH.md  16.1-VALIDATION.md  16.1-VERIFICATION.md
.planning/phases/17-branch-management/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-03-PLAN.md  17-03-SUMMARY.md  17-04-PLAN.md  17-04-SUMMARY.md  17-05-PLAN.md  17-05-SUMMARY.md  17-CONTEXT.md  17-RESEARCH.md  17-VALIDATION.md  17-VERIFICATION.md
.planning/phases/18-ci-polish/: 18-01-PLAN.md  18-01-SUMMARY.md  18-02-PLAN.md  18-02-SUMMARY.md  18-03-PLAN.md  18-03-SUMMARY.md  18-CONTEXT.md  18-RESEARCH.md  18-VALIDATION.md  18-VERIFICATION.md
.planning/phases/18.1-creation-of-pr/: 18.1-01-PLAN.md  18.1-01-SUMMARY.md  18.1-02-PLAN.md  18.1-02-SUMMARY.md  18.1-03-PLAN.md  18.1-03-SUMMARY.md  18.1-04-PLAN.md  18.1-CONTEXT.md  18.1-RESEARCH.md  (+2 more)
.planning/research/: FEATURES.md
Docs/: alteryx-pandas-default-differences.md  alteryx-pandas-differences.md  alteryx-substring-cheatsheet.md  explain-output-anatomy.md  stale-select-field-detection.md
app/: main.py  server.py  tray.py
app/frontend/: package-lock.json  package.json  vite.config.ts
app/routers/: branch.py  folder_picker.py  git_identity.py  history.py  projects.py  remote.py  save.py  settings.py  watch.py
app/services/: autostart.py  config_store.py  git_ops.py  github_api.py  gitlab_api.py  remote_auth.py  watcher_manager.py  watcher_utils.py
ci-templates/: .gitlab-ci.yml  README.md
docs/: alteryx-pandas-differences.md  explain-output-anatomy.md  history-rewrite-2026-07-01.md  scaffold-architecture.md  shapefile-sidecar-anatomy.md  spatial-crs-design.md  xml-parsing-topology.md
examples/: chain_test.yxmd  container_test.yxmd  diff_report.html  large_workflow.yxmd
reference_impl/: apply_select_edits.py  simulate_find_any_append.py
scripts/: select_helpers.py  simulate_find_any_append.py
src/alteryx_git_companion/: __main__.py  cli.py  exceptions.py  parser.py
src/yxray/: __main__.py  alteryx_expr.py  cli.py  config_utils.py  exceptions.py  explain.py  manual_clusters.py  output_collisions.py  parser.py  scaffold.py  scaffold_common.py  scaffold_filter.py  server.py  staleness.py  summarizer.py  tool_registry.py  topology.py
tests/: conftest.py  test_alteryx_expr.py  test_autostart.py  test_branch.py  test_ci_github_comment.py  test_ci_gitlab_comment.py  test_cli.py  test_cli_bundle.py  test_config_utils.py  test_diff_graph_renderer.py  test_differ.py  test_explain.py  test_git_identity.py  test_graph_renderer.py  test_history.py  test_html_renderer.py  test_import.py  test_json_renderer.py  test_main.py  test_manual_clusters.py  test_matcher.py  test_models.py  test_normalizer.py  test_output_collisions.py  test_parser.py  test_pipeline.py  test_port_probe.py  test_pr.py  test_projects.py  test_reference_scripts.py  test_remote.py  test_save.py  test_scaffold.py  test_server.py  test_settings.py  test_single_graph_renderer.py  test_sql.py  test_staleness.py  test_summarizer.py  test_tool_registry.py  (+3 more)
tests/fixtures/: __init__.py  cli.py  diffing.py  graph.py  html_report.py  matching.py  normalization.py
tools/: analyze_macro_actions.py  generations.py
(+125 files in other folders)
