[project]
name = "alteryx-git-companion"
version = "0.2.0"
description = "CLI diff tool and Git companion for Alteryx .yxmd workflow files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Laxmikant Mukkawar"},
]
dependencies = [
    "lxml>=5.0",
    "networkx>=3.6",
    "scipy>=1.13",
    "deepdiff>=8.6.2",
    "jinja2>=3.1.6",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "platformdirs>=4.0",
    "keyring>=24.0",
    "httpx>=0.27",
    "watchdog>=4.0",
    "sse-starlette>=2.0",
    "pillow>=12.2.0",
]

[build-system]
requires = ["uv_build>=0.10.7"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/Laxmi884/alteryx-git-companion"
Issues = "https://github.com/Laxmi884/alteryx-git-companion/issues"

[project.scripts]
acd = "alteryx_git_companion.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.15",
    "lxml-stubs>=0.5",
    "ruff>=0.15",
    "pre-commit>=3.0",
    "scipy-stubs>=1.17.1.0",
]
build = [
    "pyinstaller>=6.6",
    "pyinstaller-versionfile>=3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = false
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["deepdiff.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["networkx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

[tool.uv_build]
package-data = {"alteryx_git_companion" = ["static/*.js"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
