[project]
name = "yxray"
version = "0.1.0"
description = "Alteryx workflow inspector — visualize .yxmd files as interactive HTML reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1.0",
    "networkx>=3.6",
    "scipy>=1.13",
    "deepdiff>=8.6.2",
    "jinja2>=3.1.6",
    "typer>=0.12",
]

[build-system]
requires = ["uv_build>=0.10.7"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/azu-azu/yxray"
Issues = "https://github.com/azu-azu/yxray/issues"

[project.scripts]
acd = "alteryx_git_companion.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.15",
    "lxml-stubs>=0.5",
    "ruff>=0.15",
    "scipy-stubs>=1.17.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = false
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["deepdiff.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["networkx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

[tool.uv_build]
package-data = {"alteryx_git_companion" = ["static/*.js"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
