[project]
name = "yxray"
version = "0.1.0"
description = "Alteryx workflow inspector — visualize .yxmd files as interactive HTML reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1.0",
    "networkx>=3.6",
    "numpy>=1.26,<2.5",
    "scipy>=1.13",
    "deepdiff>=8.6.2",
    "jinja2>=3.1.6",
    "typer>=0.12",
    "rich>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
acd = "yxray.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pandas>=2.0",
    "mypy>=1.15",
    "lxml-stubs>=0.5",
    "ruff>=0.15",
    "scipy-stubs>=1.17.1.0,<1.18",
    "pre-commit>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pandas>=2.0",
    "mypy>=1.15",
    "lxml-stubs>=0.5",
    "ruff>=0.15",
    "scipy-stubs>=1.17.1.0,<1.18",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/yxray/renderers/_report_assets.py" = ["E501"]
# reference_impl/ holds reference implementations kept close to their
# golden-verified originals; Japanese comments run past 88 chars
"reference_impl/*" = ["E501"]
# tools/ holds standalone analysis scripts (not part of the yxray package)
# with the same dense Japanese comment style
"tools/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
ignore_missing_imports = false
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["deepdiff.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["networkx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/yxray"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["src", "."]
